--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,20 +4,24 @@
         {
             "label": "build",
             "type": "shell",
-            "command": ".venv/Scripts/pyinstaller.exe",
-            "args": [
-                "-Fw",
-                "-n",
-                "S211 Converter",
-                "-i",
-                "icon.ico",
-                "--add-data",
-                "icon.ico:.",
-                "app.py"
-            ],
+            "windows": {
+                "command": ".venv/Scripts/pyinstaller.exe",
+                "args": [
+                    "--onefile",
+                    "--windowed",
+                    "--name=\"S211 Converter\"",
+                    "--icon=icon.ico",
+                    "--add-data=icon.ico:.",
+                    "app.py"
+                ],
+            },
             "problemMatcher": [
                 "$python"
-            ]
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
